:bug: fix-style: home/articles title wrap issue

--- a/src/styles/components/home/_articles.scss
+++ b/src/styles/components/home/_articles.scss
@@ -2,7 +2,7 @@
   margin-bottom: -2rem;
   max-width: 100vw;
   overflow: hidden;
-  
+
   &__section {
     background-color: $pure-white;
     position: relative;
@@ -110,6 +110,7 @@
     font-size: 1rem;
     color: $tuna-950;
     margin-bottom: 0.8rem;
+    text-wrap: nowrap;
   }
 
   &__date {
